refactor: switched to ListCrudRepository removing the need to override findAll method